Upgrade Basic cordapp-example to JDK17