@@ -16,13 +16,13 @@ sourceSets {
     main{
         java {
             srcDir 'src/main/java'
-//            java.outputDir = file('bin/main')
+            java.outputDir = file('bin/main')
         }
     }
     test{
         java{
             srcDir 'src/test/java'
-//            java.outputDir = file('bin/test')
+            java.outputDir = file('bin/test')
         }
     }
 }
@@ -42,10 +42,5 @@ dependencies {
 }
 
 test {
-    jvmArgs = ['--add-opens', 'java.base/java.time=ALL-UNNAMED', '--add-opens', 'java.base/java.io=ALL-UNNAMED',
-               '--add-opens', 'java.base/java.util=ALL-UNNAMED', '--add-opens', 'java.base/java.net=ALL-UNNAMED',
-               '--add-opens', 'java.base/java.nio=ALL-UNNAMED', '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
-               '--add-opens', 'java.base/java.security.cert=ALL-UNNAMED', '--add-opens', 'java.base/java.security=ALL-UNNAMED',
-               '--add-opens', 'java.base/javax.net.ssl=ALL-UNNAMED', '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
-               '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED', '--add-opens', 'java.sql/java.sql=ALL-UNNAMED',]
+    jvmArgs = rootProject.ext.testJvmArgs
 }
